stop yucky box shadows on sticky ads in dark mode

--- a/busstops/static/css/style.scss
+++ b/busstops/static/css/style.scss
@@ -58,7 +58,7 @@
         border-color: #000;
     }
 
-    #AFM_inContentTop_ad iframe {
-        box-shadow-color: var(--background-color);
+    body #AFM_inContentTop_ad iframe {
+        box-shadow: none;
     }
 }
